[gd_scene load_steps=3 format=3 uid="uid://ck63nsp31aeq5"]

[ext_resource type="Script" uid="uid://c5o4wvp28dwts" path="res://Waves/wave.gd" id="1_lch1g"]
[ext_resource type="Texture2D" uid="uid://dxevd51812gkx" path="res://Waves/waves.png" id="2_lch1g"]

[node name="Wave" type="Area2D"]
script = ExtResource("1_lch1g")
damage = 100.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 6, -11, 0, 0, -7, 11, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.08020495, -0.5455086)
texture = ExtResource("2_lch1g")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
